voam.client/src/components/ProductDetails/ProductDetails.module.css
.container {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100dvh;
}

.content {
  padding: 32px 28px;
  width: 80%;
  height: 85%;
  display: flex;
  justify-content: space-between;
}

.carousel {
  width: 50%;
  max-width: 800px;
  max-height: 800px;
  align-items: center;
  justify-content: center;
}

.productDetails {
  padding: 3px 64px;
  width: 50%;
  margin: auto 0;
}

.productImg {
  width: 100%;
}

.productName {
  font-weight: bold;
  font-size: 4rem;
  color: #ffffff;
}

.productInfo {
  font-size: larger;
  padding-bottom: 12px;
  margin-bottom: 12px;
  color: #ffffffb9;
}

.price {
  font-size: x-large;
}

.description {
  overflow-y: scroll;
  max-height: 12vh;
  -ms-overflow-style: none;
  scrollbar-width: none;
  mask-image: linear-gradient(to bottom, black 90%, transparent 100%);
  -webkit-mask-image: linear-gradient(to bottom, black 90%, transparent 100%);
}

.description::-webkit-scrollbar {
  display: none;
}

.editAndDeleteContainer {
  display: flex;
  margin-top: 18px;
}

.editButton {
  width: 20%;
  height: 50px;
  font-size: large !important;
  margin-right: 24px;
  padding-top: 11px !important;
}

.deleteButton {
  width: 20%;
  height: 50px;
  font-size: large !important;
}

.invalid {
  animation: alternate;
  transition-duration: 0.4s;
  font-size: medium;
  color: red;
  margin-bottom: 6px;
}

.ratingInput {
  display: none;
}

.star {
  cursor: pointer;
}

.sizeSelector {
  width: 50% !important;
}

.amountSelector {
  width: 40% !important;
}

.sizeAndQuantityContainer {
  display: flex;
  justify-content: space-between;
  width: 60%;
  height: 50px;
}

.submitButton {
  margin-top: 32px;
  width: 60%;
  height: 60px;
}

.formAddToCart {
  border-top: 1px solid black;
  border-bottom: 1px solid black;
  padding: 24px 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.ratingContainer {
  margin: 24px 0;
  display: flex;
}

.ratingNumber {
  margin: 0;
  font-size: x-large;
  margin-left: 24px;
}

@media screen and (max-width: 768px) {
  .container {
    height: fit-content;
  }

  .content {
    flex-direction: column;
    width: 95%;
    align-items: center;
    padding: 24px 12px;
  }

  .carousel {
    width: 100%;
  }

  .productDetails {
    padding: 0;
    width: 100%;
  }

  .productName {
    font-size: 2rem;
    text-align: center;
    margin: 24px auto;
  }

  .price,
  .description {
    font-size: 1rem;
  }

  .sizeAndQuantityContainer {
    width: 90%;
  }

  .ratingContainer,
  .editAndDeleteContainer {
    align-items: center;
    justify-content: center;
  }

  .editButton,
  .deleteButton {
    width: 30%;
  }
}

@media screen and (min-width: 768px) and (max-width: 1440px) {
  .container {
    width: 100%;
    margin: 0 auto;
  }

  .content {
    padding: 0;
    width: 90%;
  }

  .carousel {
    width: 60%;
    height: fit-content;
    align-self: center;
  }

  .productDetails {
    padding: 12px 48px;
  }

  .productName {
    font-size: 3rem;
    text-align: center;
  }

  .price,
  .description {
    font-size: 1.3rem;
  }

  .sizeAndQuantityContainer {
    width: 90%;
  }

  .ratingContainer,
  .editAndDeleteContainer {
    align-items: center;
    justify-content: center;
  }

  .editButton,
  .deleteButton {
    width: 30%;
  }
}

